- fix for PDL >2.057
- build fixes
- use Test::More
- fix compile warnings
- use File::Temp not hardcoded "tempcode" dir

0.0100 2018-03-24
- CPAN indexing fixes
- fix func.pd with pp_done() - thanks @shawnlaffan

0.0098 2015-11-29
- use PDL_Indx

0.0096
    Mon Dec 17 20:54:48 CET 2012
  - fix bug reported by Edward Baudrez. Comment is in
    funcbug.t

0.0096
    Sun, 29 Jul 2012 15:46:40 +0200
  - sync version numbers, i hope.

0.0095
  Sun, 29 Jul 2012 14:57:13 +0200
  - Support building without lapack

0.0094
- Put version number in Levmar.pm

0.0093
GJL Sat, Sat, 30 Jun 2012 00:17:20 +0200
- Applied patch from Diab Jarius to use default
  parameters from levmar lib, and other small changes
  to silence warnings, etc.
- Builds and passes tests with MinGW and Strawberry perl.

0.0092
GJL Sat, 09 Jun 2012 11:16:21 +0200
- Fixes to Makefile.PL

0.0091
GJL Fri Jun  8 19:04:07 CEST 2012
- Clean tempcode. Added dependency on PDL in Makefile.PL

0.0090
GJL 13-May-2012
- Default Makefile.PL works with debian. Changes and docs for MKOBJ,
  MKSO, and CTOP.

0.0089
GJL
- Fixed bug compiling C source with no jacobian supplied.
- Added better error/warn messages in Levmar::Func
- Noticed one test is failing, don't know why.
- Added ex1.pl, ex2.pl etc. to ./examples. Matching examples in doc.

0.0088
GJL
 - Upgraded upstream source to levmar 2.5. This fixes some bugs mentioned in
   the upstream changelog, especially regarding 64 bit systems.

0.0087
GJL
 - More documentation edits.
 - Relaxed precision yet again on a test. Used tapprox_cruder.
 
0.0086
GJL  16-Jan-2008
 - Fixed some remaining int-as-pointer bugs that prevented working on
   64 bit linux.
 - Some tests failed on some machines. Removed one test and relaxed precision
   on two other tests. The two tests that needed the relaxed condition use
   floats, rather than doubles: tapprox is replaced by tapprox_cruder for
   these. In levmar.t, the second to last test is now commented out. It